# cuda-mat

./: CMakeLists.txt  Matrix.h  README.md  csr.h  dummy.cpp  example.cpp  givens.h  library.cu  library.h  main.cpp  main.cu  mat3.mtx  mat3_A0.mtx  mmio_wrapper.h  pbicgstab.cpp  pbicgstab.cu  pbicgstab.h  t1.mtx  util.h  vec3.mtx  vec3_d.mtx
bicstab_omp/: bicstab.cpp  format.txt  generator.cpp  in.txt  in_gen.txt
sys/: times.h
